RESOLVED FIXED187436
REGRESSION (r233561): MobileMail crashes when replying to an email
https://bugs.webkit.org/show_bug.cgi?id=187436
Summary REGRESSION (r233561): MobileMail crashes when replying to an email
Simon Fraser (smfr)
Reported 2018-07-07 10:43:50 PDT
REGRESSION (r233561): MobileMail crashes when replying to an email
Attachments
Patch (1.75 KB, patch)
2018-07-07 10:45 PDT, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2018-07-07 10:45:57 PDT
Simon Fraser (smfr)
Comment 2 2018-07-07 10:50:51 PDT
Simon Fraser (smfr)
Comment 3 2018-07-07 10:51:15 PDT
mitz
Comment 4 2018-07-07 11:46:17 PDT
Comment on attachment 344524 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=344524&action=review > Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:-2733 > - RELEASE_ASSERT(isMainThread()); Why not RunLoop::isMain()?
Note You need to log in before you can comment on or make changes to this bug.